--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Felixent Company Limited. </title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="X-XSS-Protection" content="0">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
